--- a/vercel.json
+++ b/vercel.json
@@ -1,5 +1,8 @@
 {
-    "name": "plagiarism-guard",
-    "version": "1.0.0",
-    "framework": "vite"
+    "$schema": "https://openapi.vercel.sh/vercel.json",
+    "framework": "vite",
+    "buildCommand": "npm run build",
+    "outputDirectory": "dist",
+    "installCommand": "npm install",
+    "devCommand": "npm run dev"
 }
