--- a/package.json
+++ b/package.json
@@ -14,13 +14,15 @@
         "test:watch": "vitest"
     },
     "dependencies": {
+        "@supabase/supabase-js": "^2.39.0",
+        "jspdf": "^4.0.0",
+        "jspdf-autotable": "^5.0.7",
+        "lucide-react": "^0.294.0",
+        "mammoth": "^1.6.0",
+        "pdfjs-dist": "^3.11.174",
         "react": "^18.2.0",
         "react-dom": "^18.2.0",
-        "lucide-react": "^0.294.0",
-        "recharts": "^2.10.0",
-        "@supabase/supabase-js": "^2.39.0",
-        "pdfjs-dist": "^3.11.174",
-        "mammoth": "^1.6.0"
+        "recharts": "^2.10.0"
     },
     "devDependencies": {
         "@types/react": "^18.2.0",
