--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
         "test:watch": "vitest"
     },
     "dependencies": {
+        "@google/generative-ai": "^0.24.1",
         "@supabase/supabase-js": "^2.39.0",
         "jspdf": "^4.0.0",
         "jspdf-autotable": "^5.0.7",
