--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
         "lucide-react": "^0.294.0",
         "mammoth": "^1.6.0",
         "pdfjs-dist": "^3.11.174",
+        "qrcode": "^1.5.4",
         "react": "^18.2.0",
         "react-dom": "^18.2.0",
         "recharts": "^2.10.0"
