--- a/public/manifest.json
+++ b/public/manifest.json
@@ -4,7 +4,6 @@
     "description": "Academic Integrity Verification Tool - Free plagiarism detection for researchers, students, and institutions",
     "start_url": "/",
     "display": "standalone",
-    "orientation": "portrait-primary",
     "theme_color": "#2980b9",
     "background_color": "#0f172a",
     "categories": [
@@ -15,54 +14,28 @@
     "lang": "en",
     "icons": [
         {
-            "src": "/icons/icon-72.png",
-            "sizes": "72x72",
-            "type": "image/png"
-        },
-        {
-            "src": "/icons/icon-96.png",
-            "sizes": "96x96",
-            "type": "image/png"
-        },
-        {
-            "src": "/icons/icon-128.png",
-            "sizes": "128x128",
-            "type": "image/png"
-        },
-        {
-            "src": "/icons/icon-144.png",
-            "sizes": "144x144",
-            "type": "image/png"
-        },
-        {
-            "src": "/icons/icon-152.png",
-            "sizes": "152x152",
-            "type": "image/png"
-        },
-        {
             "src": "/icons/icon-192.png",
             "sizes": "192x192",
             "type": "image/png",
-            "purpose": "any maskable"
-        },
-        {
-            "src": "/icons/icon-384.png",
-            "sizes": "384x384",
-            "type": "image/png"
+            "purpose": "any"
         },
         {
             "src": "/icons/icon-512.png",
             "sizes": "512x512",
             "type": "image/png",
-            "purpose": "any maskable"
-        }
-    ],
-    "screenshots": [
+            "purpose": "any"
+        },
         {
-            "src": "/screenshots/desktop.png",
-            "sizes": "1280x720",
+            "src": "/icons/icon-192.png",
+            "sizes": "192x192",
             "type": "image/png",
-            "form_factor": "wide"
+            "purpose": "maskable"
+        },
+        {
+            "src": "/icons/icon-512.png",
+            "sizes": "512x512",
+            "type": "image/png",
+            "purpose": "maskable"
         }
     ],
     "shortcuts": [
@@ -73,10 +46,11 @@
             "url": "/",
             "icons": [
                 {
-                    "src": "/icons/icon-96.png",
-                    "sizes": "96x96"
+                    "src": "/icons/icon-192.png",
+                    "sizes": "192x192"
                 }
             ]
         }
-    ]
+    ],
+    "prefer_related_applications": false
 }
