--- a/vercel.json
+++ b/vercel.json
@@ -4,5 +4,20 @@
     "buildCommand": "npm run build",
     "outputDirectory": "dist",
     "installCommand": "npm install",
-    "devCommand": "npm run dev"
+    "devCommand": "npm run dev",
+    "functions": {
+        "api/*.js": {
+            "runtime": "@vercel/node@3"
+        }
+    },
+    "rewrites": [
+        {
+            "source": "/api/:path*",
+            "destination": "/api/:path*"
+        },
+        {
+            "source": "/(.*)",
+            "destination": "/index.html"
+        }
+    ]
 }
