--- a/package.json
+++ b/package.json
@@ -18,13 +18,15 @@
         "@supabase/supabase-js": "^2.39.0",
         "jspdf": "^4.0.0",
         "jspdf-autotable": "^5.0.7",
+        "jszip": "^3.10.1",
         "lucide-react": "^0.294.0",
         "mammoth": "^1.6.0",
         "pdfjs-dist": "^3.11.174",
         "qrcode": "^1.5.4",
         "react": "^18.2.0",
         "react-dom": "^18.2.0",
-        "recharts": "^2.10.0"
+        "recharts": "^2.10.0",
+        "xlsx": "^0.18.5"
     },
     "devDependencies": {
         "@types/react": "^18.2.0",
