chore: bump version to v3.0.0-alpha for Multi-AI Hub launch

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
     "name": "plagiarism-guard-pro",
-    "version": "2.4.0",
+    "version": "3.0.0-alpha",
     "description": "Academic-Grade Plagiarism Detection - Free & Open Source",
     "private": true,
     "type": "module",
