--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
         "preview": "vite preview",
         "lint": "eslint src --ext js,jsx --report-unused-disable-directives --max-warnings 0",
         "format": "prettier --write \"src/**/*.{js,jsx,css}\"",
-        "test": "vitest run",
+        "test": "vitest run --passWithNoTests",
         "test:watch": "vitest"
     },
     "dependencies": {
